# pluma

./: README.md
Pluma-1.1-make/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  tags
Pluma-1.1-make/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Pluma-1.1-make/example/src/.libs/: lt-Main
Pluma-1.1-make/example/src/host/: Makefile  Makefile.am  Makefile.in
Pluma-1.1-make/example/src/host/.deps/: Main.Po  Warrior.Po
Pluma-1.1-make/example/src/interface/: Warrior.hpp
Pluma-1.1-make/src/Pluma/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
Pluma-1.1-make/src/Pluma/.deps/: DLibrary.Plo  Dir.Plo  Host.Plo  PluginManager.Plo  Provider.Plo
Pluma-1.1-make/src/Pluma/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Pluma-1.1-sdk-vs2010/lib/: pluma-d.lib  pluma.lib
